--- a/packages/weather/package.json
+++ b/packages/weather/package.json
@@ -6,8 +6,11 @@
   "module": "lib/widget-weather.es.js",
   "types": "lib/types/index.d.ts",
   "exports": {
-    "import": "./lib/widget-weather.es.js",
-    "require": "./lib/widget-weather.cjs.js"
+    ".": {
+      "import": "./lib/widget-weather.es.js",
+      "require": "./lib/widget-weather.cjs.js"
+    },
+    "./style.css": "./lib/style.css"
   },
   "scripts": {
     "dev": "vite",
@@ -18,6 +21,7 @@
     "@js-temporal/polyfill": "^0.4.0",
     "@zly/data-store": "workspace:^0.0.1",
     "@zly/tws-config": "workspace:^0.0.1",
+    "@zly/utils": "workspace:^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
